adding article fragment for learning purposes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="button_camera">Camera</string>
     <string name="button_camera_preview">Camera preview</string>
     <string name="colin_button">My Man Camera preview</string>
+    <string name="article_button">Article Button</string>
     <string name="button_takephoto">Take photo</string>
     <string name="button_loadphoto">Load photo</string>
     <string name="button_preview_capture">Capture</string>
@@ -19,4 +20,5 @@
     <string name="description_info">Info</string>
     <string name="request_permission">This sample needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string name="title_activity_news">NewsActivity</string>
 </resources>
